# beta_lens

./: .gitignore  README.md  pyproject.toml  serve.py
.claude/: settings.local.json
.claude/commands/: game.md
docs/: design.md  index.html
docs/game/: annotate.html  index.html  routes.json  template.html
src/beta_lens/: annotate.py  track.py
src/web/: betalens.html
