[project]
name = "beta-lens"
version = "0.1.0"
description = "AR-like overlay system for bouldering routes"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.9",
    "numpy>=1.26",
]

[project.scripts]
annotate = "beta_lens.annotate:main"
track = "beta_lens.track:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
